--- a/demo.html
+++ b/demo.html
@@ -1,11 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
+    <title>Css Project</title>
 </head>
+
 <body>
-	
+    <div class="header">
+        <div class="container">
+            <div class="header-top">
+                <a class="logo" href="#">
+                    <img src="https://img.atpsoftware.vn/2018/06/1-5.png" alt="">
+                </a>
+                <div class="search">
+                    <div class="search-layout">
+                        <input type="text" placeholder="Tim kiem san pham....">
+                        <button class="FormSearch__Button-hwmlek-3 dVzStw">
+                            <a href="#"> <i class="fas fa-search"></i></a>
+                            Tìm kiếm
+                        </button>
+                    </div>
+
+                </div>
+                <div class="function">
+                    <div class="tracking fn">
+                        <a href="#"> <i class="fas fa-box"></i></a>
+                        <span>Theo doi don hang</span>
+
+                    </div>
+                    <div class="noti fn">
+                        <a href="#"><i class="fas fa-bell"></i></a>
+                        <span>Thong bao</span>
+                    </div>
+                    <div class="account fn">
+                        <a href="#"><i class="fas fa-user"></i></a>
+                        <span>Tai khoan</span>
+                    </div>
+                    <div class="cart fn">
+                        <a href="#"><i class="fas fa-shopping-cart"></i></a>
+                        <span>Gio hang</span>
+                    </div>
+                </div>
+
+            </div>
+            <div class="header-bottom">
+                <div class="function">
+                    <div class="menubar fn">
+                        <a href="#"> <i class="fas fa-bars"></i></a>
+                        <span>DANH MUC SAN PHAM</span>
+                    </div>
+                    <div class="location fn">
+                        <a href="#"> <i class="fas fa-map-marked"></i></a>
+                        <span>Quan Thu Duc, TP.HCM</span>
+                    </div>
+                    <div class="product-seen fn">
+                        <a href="#"> <i class="fas fa-arrow-down"></i></a>
+                        <span>san pham da xem</span>
+                    </div>
+                    <div class="tracking fn">
+                        <a href="#"><i class="fas fa-shipping-fast"></i></a>
+                        <span>Giao hang</span>
+
+                    </div>
+                    <div class="noti fn">
+                        <a href="#"><i class="fas fa-fire"></i></a>
+                        <span>Thuc pham tuoi song</span>
+                    </div>
+                    <div class="account fn">
+                        <a href="#"><i class="fas fa-check-square"></i></a>
+                        <span>san pham chinh hieu</span>
+                    </div>
+                    <div class="cart fn">
+                        <a href="#"> <i class="fas fa-shopping-cart"></i></a>
+                        <span>chinh sach</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="body">
+        <div class="container">
+            <div class="body-top">
+                <div class="sub-menu">
+                    <ul>
+                        <li>1</li>
+                        <li>2</li>
+                        <li>3</li>
+                        <li>4</li>
+                        <li>5</li>
+                    </ul>
+                </div>
+                <div class="product">
+                    <div class="list-image1">
+                        <div class="img1">
+                            <img src="https://salt.tikicdn.com/cache/w1168/ts/banner/fe/69/a4/d4755618e3d3c5f03dfc21602bcb8b5c.jpg"
+                                alt="">
+                        </div>
+                        <div class="list-image2">
+                            <div class="img2">
+                                <img src="https://salt.tikicdn.com/cache/w584/ts/banner/13/7c/4c/e1afc59a88930e421116378440caacd9.jpg"
+                                    alt="">
+                            </div>
+                            <div class="img3">
+                                <img src="https://salt.tikicdn.com/cache/w584/ts/banner/13/7c/4c/e1afc59a88930e421116378440caacd9.jpg"
+                                    alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="list-image3">
+                        <div class="img-box1">
+                            <img src="https://salt.tikicdn.com/cache/w412/ts/banner/72/03/56/21847fd38e604629e473b9060e370324.jpg"
+                                alt="">
+                            <img src="https://salt.tikicdn.com/cache/w412/ts/banner/72/03/56/21847fd38e604629e473b9060e370324.jpg"
+                                alt="">
+                            <img src="https://salt.tikicdn.com/cache/w412/ts/banner/72/03/56/21847fd38e604629e473b9060e370324.jpg"
+                                alt="">
+                        </div>
+                        <div class="img-box2">
+                            <img src="https://salt.tikicdn.com/cache/w412/ts/banner/72/03/56/21847fd38e604629e473b9060e370324.jpg"
+                                alt="">
+                            <img src="https://salt.tikicdn.com/cache/w412/ts/banner/72/03/56/21847fd38e604629e473b9060e370324.jpg"
+                                alt="">
+                            <img src="https://salt.tikicdn.com/cache/w412/ts/banner/72/03/56/21847fd38e604629e473b9060e370324.jpg"
+                                alt="">
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
